--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-react": "^1.4.34",
+    "element-theme-default": "^1.4.13",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
